attached_assets/Pasted-T-Teste-j-Sistema-producao-exemploV1-Web-Service-Sistema-producao-exemploV1-Python-3-Free-Upgrade-1761178282202_1761178282205.txt
T
Teste


j
Sistema_producao_exemploV1

Web Service
Sistema_producao_exemploV1
Python 3
Free
Upgrade your instance

Connect

Manual Deploy
Service ID:
srv-d3smsnodl3ps73aoothg

DuJao22 / Sistema_producao
main
https://sistema-producao-exemplov1.onrender.com

Your free instance will spin down with inactivity, which can delay requests by 50 seconds or more.
Upgrade now
October 22, 2025 at 8:53 PM
failed
67f97e4
Remove all label-related functionalities and prepare for optimized hosting Refactors the codebase to remove label printing and automation features, and optimizes project structure for deployment on Render. Replit-Commit-Author: Agent Replit-Commit-Session-Id: 458a9168-d84f-4b4b-ad4c-56b1a915284c Replit-Commit-Checkpoint-Type: full_checkpoint Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/a8a5833d-b161-40f5-9c47-8c05f8ebfc17/458a9168-d84f-4b4b-ad4c-56b1a915284c/qjUcuuU

Rollback
Exited with status 1 while building your code.
Read our docs for common ways to troubleshoot your deploy.

All logs
Search
Search

Oct 22, 8:52 PM - 8:59 PM
GMT-3

Menu

            |                           ^~~~~~~~~~~~~~~~~~~
      In file included from /opt/render/project/python/Python-3.13.4/include/python3.13/longobject.h:107,
                       from /opt/render/project/python/Python-3.13.4/include/python3.13/Python.h:81,
                       from pandas/_libs/tslibs/nattype.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/nattype.pyx.c:6:
      /opt/render/project/python/Python-3.13.4/include/python3.13/cpython/longobject.h:111:17: note: declared here
        111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,
            |                 ^~~~~~~~~~~~~~~~~~~
      pandas/_libs/tslibs/nattype.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/nattype.pyx.c: In function ‘__Pyx_PyInt_As_int’:
      pandas/_libs/tslibs/nattype.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/nattype.pyx.c:21004:27: error: too few arguments to function ‘_PyLong_AsByteArray’
      21004 |                 int ret = _PyLong_AsByteArray((PyLongObject *)v,
            |                           ^~~~~~~~~~~~~~~~~~~
      /opt/render/project/python/Python-3.13.4/include/python3.13/cpython/longobject.h:111:17: note: declared here
        111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,
            |                 ^~~~~~~~~~~~~~~~~~~
      pandas/_libs/tslibs/nattype.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/nattype.pyx.c: In function ‘__Pyx_PyInt_As_long’:
      pandas/_libs/tslibs/nattype.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/nattype.pyx.c:21200:27: error: too few arguments to function ‘_PyLong_AsByteArray’
      21200 |                 int ret = _PyLong_AsByteArray((PyLongObject *)v,
            |                           ^~~~~~~~~~~~~~~~~~~
      /opt/render/project/python/Python-3.13.4/include/python3.13/cpython/longobject.h:111:17: note: declared here
        111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,
            |                 ^~~~~~~~~~~~~~~~~~~
      [20/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/arrays.pyx
      [21/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/vectorized.pyx
      [22/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/conversion.pyx
      [23/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/strptime.pyx
      [24/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/parsing.pyx
      [25/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/fields.pyx
      [26/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/tzconversion.pyx
      [27/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/offsets.pyx
      [28/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/timestamps.pyx
      [29/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/timedeltas.pyx
      [30/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/timezones.pyx
      [31/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/tslibs/period.pyx
      [32/151] Compiling Cython source /tmp/pip-install-64wxt2ux/pandas_50c127a2c1e74b1bbcced554970058f4/pandas/_libs/algos.pyx
      ninja: build stopped: subcommand failed.
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
[notice] A new release of pip is available: 25.1.1 -> 25.2
[notice] To update, run: pip install --upgrade pip
error: metadata-generation-failed
× Encountered error while generating package metadata.
╰─> See above for output.
note: This is an issue with the package mentioned above, not pip.
hint: See above for details.
==> Build failed 😞
==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys
Need better ways to work with logs? Try theRender CLI, Render MCP Server, or set up a log stream integration 

0 services selected:

Move

Generate Blueprint

Resume

Suspend

